--- a/index.html
+++ b/index.html
@@ -6,3 +6,7 @@
 添加第四行信息。
 
 append GPL
+
+Git is a distributed version control system.
+Git is free software distributed under the GPL.
+Git has a mutable index called stage.
